...
                    .clipShape(RoundedRectangle(cornerRadius: 8))
                    .focused($isFocused)
                    .submitLabel(.continue)
                    .onSubmit {
                        viewModel.addTask(named: viewModel.futureTaskName)
                    }
                    .accessibilityIdentifier("task name textField")

                Button("add task") {
                    viewModel.addTask(named: viewModel.futureTaskName)
                    isFocused = false
                }
                .buttonStyle(.bordered)
                .accessibilityIdentifier("add task button")
            }
            .padding(16)
            .background(.blue.opacity(0.2))
        }
    }
}
...
